# sandbox

./: .dockerignore  .gitignore  .lintr  Dockerfile  LICENSE  LICENSE-CONTENT  Makefile  README.md  _quarto.yml  index.qmd  pyproject.toml  renv_helper.R
.devcontainer/: devcontainer-lock.json  devcontainer.json  postCreateCommand.sh
.github/workflows/: deploy.yml
sandbox/allocation_water_filling/: allocation-water-filling.qmd
sandbox/artprice100/: artprice100.csv  artprice100.qmd
sandbox/artprice100/data/: 990100 - MSCI World Index - FULL - 1998-12-31 - 2025-07-14 - Daily.xlsx  USD_EUR Historical Data.csv  valeurs_mensuelles.csv
sandbox/cash_or_mmf_between_trades/: cash_or_mmf_between_trades.qmd
sandbox/etf_migration_breakeven/: etf_migration_breakeven.qmd
sandbox/leveraged_etfs/: leveraged_etfs.qmd
sandbox/leveraged_etfs/data/: 984000 - MSCI USA Index - FULL - 1998-12-31 - 2025-07-25 - Daily.xlsx  STR_2025-07-26.txt
sandbox/lifecycle_investing/: lifecycle_investing.html  lifecycle_investing.qmd
sandbox/lifecycle_investing/lifecycle_investing_files/libs/bootstrap/: bootstrap-fa79327b847c551aa1f1b9d9e8a8eb6a.min.css
sandbox/portfolio_contribution_complexities/: portfolio_contribution_complexities.qmd
